--- a/notebooks/Description.ipynb
+++ b/notebooks/Description.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6a14732e",
+   "execution_count": 5,
+   "id": "85169362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3fe7e1",
+   "id": "e23ebd21",
    "metadata": {},
    "source": [
     "# Rising Food Prices and Poverty in Latin America and the Caribbean:\n",
@@ -52,6 +52,17 @@
     "- We include a parameter to account for income increase due to GDP growth.\n",
     "\n",
     "\n",
+    "##  Pending tasks and next steps\n",
+    "\n",
+    "- We currently assume that increases in international prices are fully passed through to observed household prices.\n",
+    "- A substitution effect should be included among the products consumed by a households.\n",
+    "- changes in income caused by changes in food prices through agricultural wages. \n",
+    "- Spending can be directly impacted by analyzing the percentage consumption of each commodity in the household instead of simulating impacts to the poverty line.\n",
+    "\n",
+    "These assumptions may overestimate the effect of food price increases where most households consume diverse food baskets.\n",
+    "\n",
+    "\n",
+    "\n",
     "## [Data Preparation](data-preparation) \n",
     "\n",
     "### Harmonizing household surveys\n",
@@ -75,15 +86,21 @@
     "Equation (*) is used to calculate the countries' monthly international poverty lines per person. In this line, PPP data are from the World Bank's World Development Indicators (WDI), and CPI data are from the International Monetary Fund's (IMF) World Economic Outlook (WEO) database. More details \n",
     "\n",
     "$$\n",
-    "    lp_{ci}=(lp∗\\frac{365}{12})∗[PPP_{2011} ∗ \\frac{PCI_{year_{i}}}{PCI_{2011}}]\n",
+    "lp_{ci}=(lp∗\\frac{365}{12})∗[PPP_{2011} ∗ \\frac{PCI_{year_{i}}}{PCI_{2011}}]\n",
     "$$\n",
     "\n",
     "\n",
     "### Household Food Basket Composition\n",
     "\n",
-    "In order to focus the price increase on specific commodities we consider the relative weight of each component on the basic food basket. \n",
+    "In order to focus the price increase on specific commodities, we consider the relative weight of each component in the basic food basket. We use the Economic Commission for Latin America and the Caribbean' (CEPAL, acronym in Spanish) Basic Food Basket. They use the Expenditure Household Surveys to obtain the expenditure and the consumer of the household. In this line, the CEPAL generates the Basic Food Basket choosing a limited number of products that represent the consumption of households. \n",
     "\n",
-    "In CEPAL's methology the products are initially classified into 14 categories: 1. Grains; 2. Breads and cereals; 3. Legumes; 4. Vegetables (greens or vegetables); 5. Roots and tubers; 6. Fruits; 7. Sugars; 8. Fats and oils; 9. Milk and dairy products; 10; 10. Meat, poultry, fish, seafood and eggs; 11; 11. Non-alcoholic beverages; 12. Alcoholic beverages; 13. Food products not previously specified; 14. Meals and beverages outside the home\n",
+    "The products are initially classified into 14 categories: 1. Grains; 2. Bread and cereals; 3. Legumes; 4. Vegetables (greens or vegetables); 5. Roots and tubers; 6. Fruits; 7. Sugars; 8. Fats and oils; 9. Milk and dairy products; 10; 10. Meat, poultry, fish, seafood, and eggs; 11; 11. Non-alcoholic beverages; 12. Alcoholic beverages; 13. Food products not previously specified; 14. Meals and beverages outside the home. In the dataset, they report the quantities and the calories per capita (CEPAL, p. 49, 2018)\n",
+    "\n",
+    "#### Identification of food-producers\n",
+    "\n",
+    "As part of the simulation exercise, we assume that the effects of the market imbalance caused by the invasion have had a heterogeneous impact on the economic sectors. Therefore, as a first approximation, we consider the food-production sector.\n",
+    "\n",
+    "In this subsection, our goal is to identify within the household and employment surveys those individuals who produce food or who otherwise perform tasks closely linked to the agricultural sector (whether they have agriculture as their main or secondary activity). First, we identified all workers who are business owners or self-employed. From this group, only those in the agricultural sector are identified. As a result, we have a column that gives values equal to 1 to employers and self-employed who belong to the agricultural sector and 0 to the rest.\n",
     "\n",
     "\n",
     "### Poverty lines adjustment\n",
@@ -128,19 +145,12 @@
     "# In this example self-employed or independent workers in the agricultural sector will not be impacted by the Shock\n",
     "```\n",
     "\n",
-    "##  Pending tasks and next steps\n",
-    "\n",
-    "- We currently assume that increases in international prices are fully passed through to observed household prices.\n",
-    "- A substitution effect should be included among the products consumed by a households.\n",
-    "- changes in income caused by changes in food prices through agricultural wages. \n",
-    "- Spending can be directly impacted by analyzing the percentage consumption of each commodity in the household instead of simulating impacts to the poverty line.\n",
-    "\n",
-    "These assumptions may overestimate the effect of food price increases where most households consume diverse food baskets.\n",
-    "\n",
     "## [References](references) \n",
     "\n",
-    "- Schmidt, E, Dorosh, P, & Gilbert, R. Impacts of COVID-19 induced income and rice price shocks on household welfare in Papua New Guinea: Household model estimates. Agricultural Economics. 2021; 52: 391– 406. https://doi.org/10.1111/agec.12625\n",
     "- Artuc, Erhan; Porto, Guido; Rijkers, Bob. 2019. Household Impacts of Tariffs : Data and Results from Agricultural Trade Protection. Policy Research Working Paper;No. 9045. World Bank, Washington, DC. © World Bank. https://openknowledge.worldbank.org/handle/10986/33015 License: CC BY 3.0 IGO.”\n",
+    "- CEPAL. Medición de la pobreza por ingresos. Actualización de metodología y resultados. 2018;https://www.cepal.org/es/publicaciones/44314-medicion-la-pobreza-ingresos-actualizacion-metodologica-resultados \n",
+    "- Schmidt, E, Dorosh, P, & Gilbert, R. Impacts of COVID-19 induced income and rice price shocks on household welfare in Papua New Guinea: Household model estimates. Agricultural Economics. 2021; 52: 391– 406. https://doi.org/10.1111/agec.12625\n",
+    "\n",
     "\n",
     "\n",
     "## Annex\n",
@@ -179,13 +189,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2077261",
+   "id": "544c7294",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "eff28ede",
+   "id": "e9c4303b",
    "metadata": {},
    "source": [
     "## Context\n",
@@ -195,13 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "df9fdd92",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "id": "fa0db0ba",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -231,6 +237,14 @@
     "plt.show()\n",
     "# https://www.fao.org/worldfoodsituation/foodpricesindex"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c8118e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
