--- a/notebooks/scldata_policy_simulation.ipynb
+++ b/notebooks/scldata_policy_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37fa2e59",
+   "id": "e30152f8",
    "metadata": {},
    "source": [
     "# Rising Food Prices and Poverty in Latin America and the Caribbean:\n",
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "eb1d5a94",
+   "execution_count": 1,
+   "id": "2364ece8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "221159f1",
+   "execution_count": 2,
+   "id": "4b2edcb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3343: DtypeWarning: Columns (7,8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate simulator \n",
     "scldata_simulation = SCLdataSimulation()"
@@ -36,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "52f873bb",
+   "execution_count": 10,
+   "id": "27186441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +67,7 @@
     "\n",
     "# shock_weight\n",
     "# - pct impact of exogenous impact\n",
-    "shock_weight = 0.30\n",
+    "shock_weight = 0.20\n",
     "\n",
     "# population affected - shock_weight\n",
     "# - specify whether the impact is focused on a subgroup of the population\n",
@@ -72,8 +81,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "7e833d48",
+   "execution_count": 6,
+   "id": "5266c82b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pais_c</th>\n",
+       "      <th>population</th>\n",
+       "      <th>poor_int_pop</th>\n",
+       "      <th>poor_int_delta_pop</th>\n",
+       "      <th>poor31_int_pop</th>\n",
+       "      <th>poor31_int_delta_pop</th>\n",
+       "      <th>poor_national_pop</th>\n",
+       "      <th>poor_national_delta_pop</th>\n",
+       "      <th>poor_e_national_pop</th>\n",
+       "      <th>poor_e_national_delta_pop</th>\n",
+       "      <th>poor_national_new_recovery</th>\n",
+       "      <th>poor_e_national_new_recovery</th>\n",
+       "      <th>poor_int</th>\n",
+       "      <th>poor_int_delta</th>\n",
+       "      <th>poor31_int</th>\n",
+       "      <th>poor31_int_delta</th>\n",
+       "      <th>poor_national</th>\n",
+       "      <th>poor_national_delta</th>\n",
+       "      <th>poor_e_national</th>\n",
+       "      <th>poor_e_national_delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LAC</td>\n",
+       "      <td>594945580.312</td>\n",
+       "      <td>205626280.663</td>\n",
+       "      <td>198975501.635</td>\n",
+       "      <td>117770812.590</td>\n",
+       "      <td>111155281.743</td>\n",
+       "      <td>211221653.122</td>\n",
+       "      <td>223382475.468</td>\n",
+       "      <td>73136580.752</td>\n",
+       "      <td>87230344.374</td>\n",
+       "      <td>198302474.633</td>\n",
+       "      <td>297735368.452</td>\n",
+       "      <td>0.357</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>0.204</td>\n",
+       "      <td>0.193</td>\n",
+       "      <td>0.366</td>\n",
+       "      <td>0.387</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>0.151</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  pais_c    population  poor_int_pop  poor_int_delta_pop  poor31_int_pop  \\\n",
+       "0    LAC 594945580.312 205626280.663       198975501.635   117770812.590   \n",
+       "\n",
+       "   poor31_int_delta_pop  poor_national_pop  poor_national_delta_pop  \\\n",
+       "0         111155281.743      211221653.122            223382475.468   \n",
+       "\n",
+       "   poor_e_national_pop  poor_e_national_delta_pop  poor_national_new_recovery  \\\n",
+       "0         73136580.752               87230344.374               198302474.633   \n",
+       "\n",
+       "   poor_e_national_new_recovery  poor_int  poor_int_delta  poor31_int  \\\n",
+       "0                 297735368.452     0.357           0.345       0.204   \n",
+       "\n",
+       "   poor31_int_delta  poor_national  poor_national_delta  poor_e_national  \\\n",
+       "0             0.193          0.366                0.387            0.127   \n",
+       "\n",
+       "   poor_e_national_delta  \n",
+       "0                  0.151  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shock_component = ['Alimentos fuera del hogar',\n",
+    "                   'Azúcares', 'Bebidas no alcohólicas',\n",
+    "                   'Carnes, aves y huevos',\n",
+    "                   'Frutas', \n",
+    "                   'Granos',\n",
+    "                   'Panes y\\ncereales',\n",
+    "                   'Grasas', \n",
+    "                   'Leguminosas',\n",
+    "                   'Lácteos', \n",
+    "                   'Productos no especificados previamente',\n",
+    "                   'Raíces y\\ntubérculos', 'Vegetales'\n",
+    "                  ]\n",
+    "\n",
+    "change_A = scldata_simulation.simulate_shock(shock_component, shock_weight, shock_population, gdp_growth_population='', year='2022')\n",
+    "scldata_simulation.region_results(change_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "510999b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pais_c</th>\n",
+       "      <th>population</th>\n",
+       "      <th>poor_int_pop</th>\n",
+       "      <th>poor_int_delta_pop</th>\n",
+       "      <th>poor31_int_pop</th>\n",
+       "      <th>poor31_int_delta_pop</th>\n",
+       "      <th>poor_national_pop</th>\n",
+       "      <th>poor_national_delta_pop</th>\n",
+       "      <th>poor_e_national_pop</th>\n",
+       "      <th>poor_e_national_delta_pop</th>\n",
+       "      <th>poor_national_new_recovery</th>\n",
+       "      <th>poor_e_national_new_recovery</th>\n",
+       "      <th>poor_int</th>\n",
+       "      <th>poor_int_delta</th>\n",
+       "      <th>poor31_int</th>\n",
+       "      <th>poor31_int_delta</th>\n",
+       "      <th>poor_national</th>\n",
+       "      <th>poor_national_delta</th>\n",
+       "      <th>poor_e_national</th>\n",
+       "      <th>poor_e_national_delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LAC</td>\n",
+       "      <td>594945580.312</td>\n",
+       "      <td>197905299.006</td>\n",
+       "      <td>198710494.846</td>\n",
+       "      <td>110203783.417</td>\n",
+       "      <td>110866575.127</td>\n",
+       "      <td>211221653.122</td>\n",
+       "      <td>219342679.124</td>\n",
+       "      <td>73136580.752</td>\n",
+       "      <td>83393773.987</td>\n",
+       "      <td>109632005.453</td>\n",
+       "      <td>178443682.030</td>\n",
+       "      <td>0.343</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>0.191</td>\n",
+       "      <td>0.192</td>\n",
+       "      <td>0.366</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>0.144</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  pais_c    population  poor_int_pop  poor_int_delta_pop  poor31_int_pop  \\\n",
+       "0    LAC 594945580.312 197905299.006       198710494.846   110203783.417   \n",
+       "\n",
+       "   poor31_int_delta_pop  poor_national_pop  poor_national_delta_pop  \\\n",
+       "0         110866575.127      211221653.122            219342679.124   \n",
+       "\n",
+       "   poor_e_national_pop  poor_e_national_delta_pop  poor_national_new_recovery  \\\n",
+       "0         73136580.752               83393773.987               109632005.453   \n",
+       "\n",
+       "   poor_e_national_new_recovery  poor_int  poor_int_delta  poor31_int  \\\n",
+       "0                 178443682.030     0.343           0.345       0.191   \n",
+       "\n",
+       "   poor31_int_delta  poor_national  poor_national_delta  poor_e_national  \\\n",
+       "0             0.192          0.366                0.380            0.127   \n",
+       "\n",
+       "   poor_e_national_delta  \n",
+       "0                  0.144  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shock_component = ['Alimentos fuera del hogar',\n",
+    "                   'Azúcares', 'Bebidas no alcohólicas',\n",
+    "                   'Frutas', \n",
+    "                   'Granos',\n",
+    "                   'Panes y\\ncereales',\n",
+    "                   'Grasas', \n",
+    "                   'Leguminosas',\n",
+    "                   'Lácteos', \n",
+    "                   'Productos no especificados previamente',\n",
+    "                   'Raíces y\\ntubérculos', 'Vegetales']\n",
+    "\n",
+    "change_B = scldata_simulation.simulate_shock(shock_component, shock_weight, shock_population, gdp_growth_population='', year='2022')\n",
+    "scldata_simulation.region_results(change_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "726f30cc",
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +352,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ARG</td>\n",
-       "      <td>1.000</td>\n",
+       "      <td>0.670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>BHS</td>\n",
-       "      <td>1.002</td>\n",
+       "      <td>0.815</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -118,11 +365,11 @@
       ],
       "text/plain": [
        "   pais_c  weight\n",
-       "0     ARG   1.000\n",
-       "33    BHS   1.002"
+       "0     ARG   0.670\n",
+       "33    BHS   0.815"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,8 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "5641372f",
+   "execution_count": 51,
+   "id": "90c795bd",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +449,7 @@
        "28    VCT       0.083"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "d9c33387",
+   "execution_count": 52,
+   "id": "bbe2d36c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e421b0",
+   "id": "5f074f6a",
    "metadata": {},
    "source": [
     "## Deltas by Country"
@@ -233,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ce802970",
+   "id": "b0a8f4b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0a6edd9c",
+   "id": "c27b07b6",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee38796",
+   "id": "f49fec4c",
    "metadata": {},
    "source": [
     "### By country (population)"
@@ -314,7 +561,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "abe733b1",
+   "id": "256fc5ef",
    "metadata": {},
    "source": [
     "change = (change.assign(lp_delta = change['lp_ci_delta'] - change['lp_ci'] ,\n",
@@ -326,7 +573,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e11d0e51",
+   "id": "7e860954",
    "metadata": {},
    "source": [
     "#change.groupby(['pais_c']).agg({'lp_delta':sum,\n",
@@ -337,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e0b20c",
+   "id": "be77d963",
    "metadata": {},
    "source": [
     "## Deltas by Group"
@@ -346,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "910aa7d3",
+   "id": "de50f3c8",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +719,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "9361f80a",
+   "id": "ad24937f",
    "metadata": {},
    "source": [
     "color_labels = group_melt[group[-1]].unique()\n",
@@ -507,7 +754,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "74ad36da",
+   "id": "bd9561ca",
    "metadata": {},
    "source": [
     "ordered_df\n",
@@ -530,7 +777,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "df28544f",
+   "id": "62b5bb84",
    "metadata": {},
    "source": [
     "group[-1]"
@@ -538,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5668dc54",
+   "id": "9c8a8adb",
    "metadata": {},
    "source": [
     "#### Distribution of poverty rate changes in percentual points by country"
@@ -546,7 +793,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "453ab301",
+   "id": "aaf342a3",
    "metadata": {},
    "source": [
     "Simulate impacts using a vector of scenarios to evaluate distributions."
@@ -555,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a9838fb7",
+   "id": "3c2ea220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "393d5b3a",
+   "id": "9eeeab71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bfa9f93a",
+   "id": "b8e1fbd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1020991c",
+   "id": "6732d597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bbf1cdc8",
+   "id": "2345d26e",
    "metadata": {},
    "outputs": [
     {
