--- a/notebooks/Description.ipynb
+++ b/notebooks/Description.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bfd7f26d",
+   "id": "058bdb8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14cdf8fe",
+   "id": "fa3b4c12",
    "metadata": {},
    "source": [
     "# Rising Food Prices and Poverty in Latin America and the Caribbean:\n",
@@ -37,30 +37,31 @@
     "\n",
     "## [Introduction](introduction) \n",
     "\n",
-    "Changes in food prices always have an impact on people's lives, especially on the most vulnerable. Understanding the impact that exogenous shocks can have, the location and characteristics of the most affected population is fundamental to be able to carry out policy responses to mitigate their effects. The objective of this exercise is to simulate the impact of rising food prices in the Latin American and Caribbean region using a microdata simulation approach from household surveys.\n",
-    "The current conflict between Russia and Ukraine ombined with other factors such as [increased demand from China](https://www.fas.usda.gov/data/ukraine-conflict-and-other-factors-contributing-high-commodity-prices-and-food-insecurity#:~:text=Russia's%20invasion%20of%20Ukraine%20comes,prices%20are%20up%2090%20percent.) is already affecting food and other commodity prices in ways that may affect Latin America. In 2019 Russia and Ukraine exported 25% of the world’s wheat and Russia is the third oil producer in the world and the leading exporter of fertilizer. As a benchmark a similar change in food prices happened in 2008 from which we can take some lessons learned for the current situation.\n",
-    "The first half of 2008 was marked by significant rises in commodity and food prices. Between 2006 and 2008 price of rice increased by 217 percent, wheat by 136 percent, maize by 125 percent among others.(ALNAP, 2008)  The leading causes for the spike are still debated but most reports seem to point at multiple factors including rising energy prices (which increased production costs and triggered an increase in demand for biofuels), the depreciation of the U.S. dollar (which caused prices in commodities to increase to compensate for the drop in local currency earnings)(IFPRI, 2010) , and food export restrictions caused in part due to weather shocks in Ukraine among others. It is estimated that the 2008 spike may have pushed up to an extra 155m people into extreme poverty worldwide (de Hoyos, R.E. and Medvedev, D., 2011).\n",
+    "Changes in food prices always raise concerns about the potential impact on people's lives, especially on the poverty levels and welfare of the most vulnerable. Understanding the impact of exogenous shocks, their location, and the characteristics of the most affected population, is fundamental for the design and implementation of policy responses to mitigate their effects. The objective of this note, therefore, is to examine the impact of the increase in food prices caused by the Ukraine war on poverty levels among **26** countries in Latin America and the Caribbean (LAC) over **2022**. We considered the increase among multiple commodities and used household survey data to calculate the overall effect on poverty levels. \n",
+    "\n",
+    "The current conflict between Russia and Ukraine combined with other factors such as [increased demand from China](https://www.fas.usda.gov/data/ukraine-conflict-and-other-factors-contributing-high-commodity-prices-and-food-insecurity#:~:text=Russia's%20invasion%20of%20Ukraine%20comes,prices%20are%20up%2090%20percent.) is already affecting food and other commodity prices worldwide. Russia and Ukraine represent 25% of the world’s wheat exports **{SOURCE}**, and Russia is currently the third oil producer in the world and the leading exporter of fertilizer **{SOURCE}**. Therefore, the conflict between Russia and Ukraine is expected to continue to rise the food prices and affect vulnerable population, particularly households with low food basket substitution power.\n",
+    "\n",
+    "We observed significant rises in food prices and commodities back in 2008.  Between 2006 and 2008, price of rice increased by 217 percent, wheat by 136 percent, and maize by 125 percent, among others (ALNAP, 2008). The leading causes for the spike are still debated but most reports seem to point at multiple factors including rising energy prices, which increased production costs and triggered an increase in demand for biofuels; the depreciation of the U.S. dollar, which caused prices in commodities to increase to compensate for the drop in local currency earnings (IFPRI, 2010); and food export restrictions caused in part due to weather shocks in Ukraine,. As a result, it is estimated that the 2008 spike may have pushed up to an extra 155 million people into extreme poverty worldwide (de Hoyos, R.E. and Medvedev, D., 2011). \n",
+    "\n",
     "The most recent figures from the FAO [food price index](https://www.fao.org/worldfoodsituation/foodpricesindex/en/) show an increase of around 20% from a year ago and an increase in the cereal price index of around 15% from a year ago. The FAO also warns of the risk of further increments of food prices rom 8 to 22% [(FAO, 2022)](https://www.fas.usda.gov/sites/default/files/2022-04/22%2004%2006%20Food%20Prices%20and%20Food%20Security_0.pdf). \n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
     "## [Methodology](#methodology) \n",
     "\n",
-    "Many potential factors are considered in the simulations. \n",
+    "Many potential factors are considered in the simulations.\n",
     "\n",
-    "**First** we simulated the direct effect through the increase in food prices by increasing the poverty lines of the countries in the region. The adjustment is made by impacting each country's poverty line by the percentage that each commodity represents in the line as a whole. For example, if there is an increment of 20% in the price of wheat and wheat represents 20% of the basket used to calculate the county's poverty line, the increment in the poverty line is of 4%.\n",
+    "**1.** We simulated the direct effect of the increase in food prices by increasing the poverty lines of the countries in the region. We multiply each country's poverty line by the expected growth rate in each commodity price and the share of each commodity in the food basket. For example, assuming an increment of 20% in the price of wheat and a wheat share of 20% in the country’s food basket, the increment in the poverty line would be 4%.\n",
     "\n",
-    "**Second** we took into account that some households actually bennefit from increases in prices by applying the same rate on increment that is applied to the poverty line to households that are involved in agricultural activities as self employed or as employers. That is we considered that there is no pass through effect to employees in the sector.\n",
+    "**2.** Considering that some households benefit from increases in prices, we assume that the expected growth in each commodity positively affects the income of self-employed and employers involved in agricultural activities. That is, we consider that there is no pass-through effect on employees in the sector. For example, assuming an increment of 20% in the price of wheat, we assume that the income per capita of self-employer and employers involved in agricultural activities increase by 20% as well. \n",
     "\n",
-    "**Third** we considered that many commodity exporter countries actually bennefit from the current situation by taking into consideration growth forecasts published by he IMF. The assumption for simulating GDP growth on poverty was that all incomes in the country grow at the same rate. While growth incidence curves tend to vary depending on which years are being analyzed, the assumption seems to be backed by recent growth trends in the region as measured by [the World Bank](https://www.worldbank.org/en/topic/poverty/lac-equity-lab1/economic-growth/growth-incidence-curve#:~:text=The%20Growth%20Incidence%20Curve%20(GIC,between%20two%20points%20in%20time) except for countries where the poverty rate is less than 10%. For the botton decile in the region growth has tended to be less benefficial than for he rest.\n",
+    "**3.** We assumed that many exporters of commodities benefit from the current situation by taking into consideration growth forecasts published by the IMF. The assumption for simulating GDP growth on poverty was that all incomes in the country grow at the same rate. While growth incidence curves tend to vary depending on which years are being analyzed, the assumption seems to be backed by recent growth trends in the region as measured by [the World Bank](https://www.worldbank.org/en/topic/poverty/lac-equity-lab1/economic-growth/growth-incidence-curve#:~:text=The%20Growth%20Incidence%20Curve%20(GIC,between%20two%20points%20in%20time) except for countries where the poverty rate is less than 10%. For the botton decile in the region growth has tended to be less benefficial than for he rest.\n",
     "\n",
     "\n",
     "##  Other caveats to be considered\n",
     "\n",
     "- We currently assume that increases in international prices are fully passed through to observed household prices.\n",
-    "- We do not take into account substitution effects among the products consumed by a households for practical reasons since these in turn would trigger (likely) smaller increases in prices of substitute goods.\n",
+    "- We do not take into account substitution effects among the products consumed by households for practical reasons since these in turn would trigger (likely) smaller increases in the prices of substitute goods.\n",
     "- changes in income caused by changes in food prices through agricultural wages. \n",
     "- We do not analyze consumption patterns at the micro level since most surveys used do not have detailed information on consumption.\n",
     "\n",
@@ -81,7 +82,7 @@
     "\n",
     "In order to replicate the official poverty of each country, it is also necessary to use the official poverty thresholds. To define them, most countries use the concept of the basic food and non-food basket. On the one hand, the basic food basket establishes the minimum economic threshold to satisfy food needs based on the consumption habits of households in each country; if a family is below this threshold, it is defined as extreme poverty. On the other hand, the non-food basic basket adds non-food components to the basic basket; this threshold is used to identify the population living in poverty. \n",
     "\n",
-    "Due to lack of information it was not possible to replicate all the national poverty figures. i these cases international poverty lines were used. To make the lines comparable with the national income of the year of the survey they are adjusted and deflated with the Consumer Price Index (CPI) and the Purchasing Power Parity - PPP. \n",
+    "Due to lack of information it was not possible to replicate all the national poverty figures. i these cases international poverty lines were used. To compare poverty lines with the national income of the year of the survey, we adjusted and deflated the poverty lines with Consumer Price Index (CPI) and the Purchasing Power Parity - PPP. \n",
     "\n",
     "Equation (*) is used to calculate the countries' monthly international poverty lines per person. In this line, PPP data are from the World Bank's World Development Indicators (WDI), and CPI data are from the International Monetary Fund's (IMF) World Economic Outlook (WEO) database. More details \n",
     "\n",
@@ -150,7 +151,7 @@
     "\n",
     "## Results\n",
     "\n",
-    "For the main simulation an increase of 20% in the poverty line was used in line with the most recent forecasts from the FAO. Using this stimate the result is a xx increase in the poverty rate of the region. Some countries actually lower their poverty rate due to the macroeconomic growth effect. \n",
+    "For the main simulation an increase of 20% in the poverty line was used in line with the most recent forecasts from the FAO. Using this stimate the result is a **{NUMBER}** increase in the poverty rate of the region. Some countries actually lower their poverty rate due to the macroeconomic growth effect. \n",
     "\n",
     "\n",
     "<table><tr>\n",
@@ -169,6 +170,14 @@
     "  </p> \n",
     "</td>\n",
     "</tr></table>\n",
+    "\n",
+    "## Results\n",
+    "\n",
+    "Food prices and supply chain has been disrupted since the start of the pandemic. But with the war in Ukraine, the world is expecting to see a large increase in food prices, particularly affecting low and low-middle income countries. The simulation using household surveys data reflects that additional individuals could potentially fall under the new poverty line, ranging from **{MINIMUM}** and **{MAXIMUM}** percentual points.  Moreover, we expect that the number of poor would increase by **{MINIMUM}**% and **{MAXIMUM}**%.\n",
+    "\n",
+    "\n",
+    "The simulation shows that food prices increases will likely have a moderate impact on poverty. Therefore, targeting social protection programs for individuals falling under the new poverty line, and country-specific food prices policies, among other measures, is important to minimize the impact. Some examples are food coupons for the most vulnerable populations. However, further research is needed to understand the cost-benefit ratio of these policy responses.   \n",
+    "\n",
     "\n",
     "## [References](references) \n",
     "\n",
@@ -224,13 +233,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a359ac62",
+   "id": "f1e32274",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4d249d90",
+   "id": "999ad320",
    "metadata": {},
    "source": [
     "## Context\n",
@@ -241,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "06efcbd6",
+   "id": "6991294e",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a74281bf",
+   "id": "8d57f070",
    "metadata": {},
    "outputs": [],
    "source": []
